begin moving to rust

--- a/game/rust/Cargo.toml
+++ b/game/rust/Cargo.toml
@@ -8,4 +8,5 @@ crate-type = ["dylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[build-dependencies]
+bindgen = "0.65.1"
